Added an appstate to hold 25 buttons. Those buttons each run a different function. They can each output a string that will get displayed on screen (and copied to clipboard automatically)

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # TODO: Re-enable me in a proper game project since resources take up a lot more repository space to track
 # /data/Resources/
 /data/Resources/Raw/
+/data/screenshot*.png
 
 /release/
 
